# ethos-chain

./: .env.example  .gitignore  LICENSE  PRD_Version2.md  README.md  SPEC_Version2.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.kiro/specs/ethos-chain-auditor/: design.md  requirements.md
data/policies/: code_of_conduct.md
data/sample/: README.md  demo_scenarios.json  expected_output.json  suppliers.json
docs/: PITCH_GUIDE.md  PRESENTATION.md  README.md  README_DIAGRAMS.md  agent_interaction_diagram.mermaid  architecture_diagram.mermaid  architecture_diagram_simple.mermaid  audit_process_flow.mermaid  data_flow_diagram.mermaid  deployment_diagram.mermaid
infrastructure/: README.md
infrastructure/bedrock/: README.md  auditor-agent-config.json  investigator-agent-config.json  supervisor-agent-config.json
infrastructure/iac/: README.md  deploy.sh  teardown.sh  template.yaml
infrastructure/lambda/: README.md  deploy-lambda.sh  news_search.py  requirements.txt
scripts/: README.md  deploy.sh  setup.sh  test.sh
specs/: PRD.md  SPECIFICATION.md  use_case_diagram.mermaid  use_case_diagram_Version2.mermaid
src/: __init__.py  config.py  exceptions.py  logging_config.py  models.py
src/agents/: __init__.py  auditor.py  investigator.py  supervisor.py
src/dashboard/: __init__.py  app.py
src/utils/: __init__.py  aws_clients.py
tests/: README.md
tests/integration/: test_workflow.py
tests/unit/: test_auditor.py  test_investigator.py  test_supervisor.py
